--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,5 @@
  - normalization and tokenization properly
- - other losses - BOW, KL
- - z predicting & visualization
- - storing results properly
- - model saving
+ - other losses - KL
  - add comments!
  - configurable z prior
- - different z sampling techniques
  - system decoder conditioned on user dec
